--- a/samconfig.toml
+++ b/samconfig.toml
@@ -10,6 +10,7 @@ parameter_overrides = "Stage=\"default\""
 image_repositories = []
 confirm_changeset = true
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-13g7rjwwb2q48" #Incluir bucket propio
+disable_rollback = true
 
 [staging]
 [staging.deploy]
