--- a/samconfig.toml
+++ b/samconfig.toml
@@ -9,6 +9,9 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"default\""
 image_repositories = []
 confirm_changeset = true
+confirm_changeset = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-13g7rjwwb2q48"
+disable_rollback = true
 
 [staging]
 [staging.deploy]
@@ -19,6 +22,9 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
 image_repositories = []
+confirm_changeset = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-13g7rjwwb2q48"
+disable_rollback = true
 
 [production]
 [production.deploy]
@@ -29,3 +35,6 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
 image_repositories = []
+confirm_changeset = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-13g7rjwwb2q48"
+disable_rollback = true
